--- a/index.css
+++ b/index.css
@@ -197,4 +197,70 @@ footer {
 }
 
 
+/* ABOUT */
+
+.container {
+  display: flex;
+}
+
+/* Side Menu Styles */
+.side-menu {
+  width: 200px; /* Adjust as needed */
+  background-color: #f4f4f4;
+  padding: 20px;
+  height: 100vh; /* Takes full viewport height */
+  overflow-y: scroll; /* Add scrollbar when content overflows */
+}
+.side-menu a {
+  display: block;
+  margin-bottom: 10px;
+  text-decoration: none;
+  color: #333;
+}
+
+/* Main Section Styles */
+.main-section {
+flex: 1;
+padding: 20px;
+display: flex;
+flex-direction: row; /* Display items in rows */
+flex-wrap: wrap; /* Allow items to wrap to the next row */
+gap: 20px;
+justify-content: space-between;
+}
+.item {
+width:45%; /* Two items per row with some gap */
+background-color: #fff;
+border: 1px solid #ddd;
+padding: 20px;
+box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+transition: transform 0.3s ease; /* Animation on hover */
+}
+.item:hover {
+  transform: scale(1.05); /* Scale on hover */
+}
+.item img {
+  max-width: 100%;
+  height: auto;
+}
+.item-description {
+  margin-top: 10px;
+}
+.item-menu-link {
+  display: block;
+  text-align: center;
+  margin-top: 10px;
+  text-decoration: none;
+  color: #2ecc71; /* Green color for the link */
+  font-weight: bold;
+}
+
+/* Add media query for responsive layout */
+@media screen and (max-width: 768px) {
+  .main-section .item {
+    width: 100%; /* Single column on smaller screens */
+  }
+}
+
+
 
