--- a/index.css
+++ b/index.css
@@ -41,6 +41,7 @@ nav {
 }
 nav button {
   border: none;
+  background-color: #6d6c6c;
   font-size: 1em;
   width: 30%;
   padding: 8px 15px;
@@ -50,7 +51,7 @@ nav button {
   margin-left: 5%;
   margin-right: 5%;
 }
-nav button.home {
+/*nav button.home {
   background-color: #6d6c6c;
 }
 nav button.about {
@@ -58,7 +59,7 @@ nav button.about {
 }
 nav button.contact {
   background-color: #6d6c6c;
-}
+}*/
 nav button:hover {
   color: white;
 }
@@ -249,4 +250,34 @@ transition: transform 0.3s ease; /* hover animation, smooth transition */
     width: 100%; /* Single column on smaller screens */
   }
   
+}
+
+/*Drawing section style */
+.drawing-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+.colors {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+.color-button {
+  width: 30px;
+  height: 30px;
+  border: 2px solid gray;
+  cursor: pointer;
+}
+.color-display {
+  width: 70px;
+  height: 70px;
+  border: 2px solid white;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+canvas {
+  border: 2px solid black;
+  cursor: crosshair;
 }
