--- a/index.css
+++ b/index.css
@@ -51,15 +51,7 @@ nav button {
   margin-left: 5%;
   margin-right: 5%;
 }
-/*nav button.home {
-  background-color: #6d6c6c;
-}
-nav button.about {
-  background-color: #6d6c6c;
-}
-nav button.contact {
-  background-color: #6d6c6c;
-}*/
+
 nav button:hover {
   color: white;
 }
@@ -283,3 +275,17 @@ canvas {
   border: 2px solid black;
   cursor: crosshair;
 }
+
+#color-picker {
+  width: 34px;
+  height: 34px;  
+}
+
+.controls {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+
